added page content

--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
     <link href ="./resources/css/styles.css" rel="stylesheet" type="text/css">
   </head>
   <body>
+<h1>Discover hidden places in the world around you</h1>
+<p>
+  <a href ="#" alt="link coming soon">Download Excursion (Coming soon!)</a>
+<p>
+
+<video autoplay muted loop>
+  <source src="resources/excursion.mp4" type="video/mp4">
+</video>
+<h2>Your personal travel guide</h2>
+<h3>Excursion remembers places you like, and recommends new points of interest around you.</h3>
+<img src="resources/camp.jpg" alt="camping tent"/>
+<img src="resources/phone.png" alt="icon of a phone"/>
+<h2>Coming Soon for iPhone and Android</h2>
+<a href ="#" alt="link coming soon">Download Excursion (Coming soon!)</a>
 
   </body>
 </html>
